# opencv-course-practice

labs/src/lachinov/: CMakeLists.txt  build.bat
labs/src/lachinov/lab0/: CMakeLists.txt  main.cpp
labs/src/lachinov/lab1/: CMakeLists.txt  main.cpp
labs/src/lachinov/lab2/: CMakeLists.txt  main.cpp
